force-app/main/default/objects/Engagement__c/fields/Account_Assigned_PSX__c.field-meta.xml
<CustomField>
    <fullName>Account_Assigned_PSX__c</fullName>
    <description>Account Assigned PSX</description>
    <formula>TEXT( Opportunity__r.Account.Assigned_PSX__c )</formula>
    <label>Account Assigned PSX</label>
    <type>Text</type>
</CustomField>