force-app/main/default/objects/Engagement__c/fields/Account_GHG__c.field-meta.xml
<CustomField>
    <fullName>Account_GHG__c</fullName>
    <description>Account GHG</description>
    <formula>TEXT(Opportunity__r.Account.Type_of_GHG__c)</formula>
    <label>Account GHG</label>
    <type>Text</type>
</CustomField>