force-app/main/default/objects/Engagement__c/fields/Account_Office__c.field-meta.xml
<CustomField>
    <fullName>Account_Office__c</fullName>
    <description>Account office</description>
    <formula>Opportunity__r.Account.Office__c</formula>
    <label>Account Office</label>
    <type>Text</type>
</CustomField>