force-app/main/default/objects/Engagement__c/fields/Account_Operational_Mode__c.field-meta.xml
<CustomField>
    <fullName>Account_Operational_Mode__c</fullName>
    <description>Account Operational Mode</description>
    <formula>TEXT( Opportunity__r.Account.Operational_Mode__c  )</formula>
    <label>Account Operational Mode</label>
    <type>Text</type>
</CustomField>