force-app/main/default/objects/Engagement__c/fields/Account_Operational_Phase__c.field-meta.xml
<CustomField>
    <fullName>Account_Operational_Phase__c</fullName>
    <description>Account operational phase</description>
    <formula>TEXT( Opportunity__r.Account.Operational_Phase__c )</formula>
    <label>Account Operational Phase</label>
    <type>Text</type>
</CustomField>