force-app/main/default/objects/Engagement__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Account owner first and last names</description>
    <formula>Opportunity__r.Account.Owner.FirstName + &quot; &quot; +  Opportunity__r.Account.Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>