force-app/main/default/objects/Engagement__c/fields/Account_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent_Account__c</fullName>
    <description>Parent account name</description>
    <formula>Opportunity__r.Account.Parent.Name</formula>
    <label>Account Parent Account Name</label>
    <type>Text</type>
</CustomField>