force-app/main/default/objects/Engagement__c/fields/Account_Projected_Net_Rev_YOY__c.field-meta.xml
<CustomField>
    <fullName>Account_Projected_Net_Rev_YOY__c</fullName>
    <formula>Opportunity__r.Account.Annual_Projected_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Projected Net Rev. YOY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>