force-app/main/default/objects/Engagement__c/fields/Account_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Status__c</fullName>
    <description>Account relationship status</description>
    <formula>TEXT( Opportunity__r.Account.Relationship_Status__c )</formula>
    <label>Account Relationship Status</label>
    <type>Text</type>
</CustomField>