force-app/main/default/objects/Engagement__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>Account customer tier</description>
    <formula>TEXT(Opportunity__r.Account.Customer_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>