force-app/main/default/objects/Engagement__c/fields/Campaign_Media_Budget__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Media_Budget__c</fullName>
    <label>Campaign Media Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>