force-app/main/default/objects/Engagement__c/fields/Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Score__c</fullName>
    <label>Complexity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>