force-app/main/default/objects/Engagement__c/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <description>Engagement status</description>
    <label>Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New/Not reviewed</fullName>
                <default>true</default>
                <label>New/Not reviewed</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>