force-app/main/default/objects/Engagement__c/fields/Engagement_type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presentation/Demo</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Workshop/Training</fullName>
            </value>
            <value>
                <fullName>Special Creative Validation</fullName>
            </value>
            <value>
                <fullName>Hotdesking</fullName>
            </value>
            <value>
                <fullName>Product/Platform Updates</fullName>
            </value>
            <value>
                <fullName>Setup/Strategy Evaluation</fullName>
            </value>
            <value>
                <fullName>Escalation/Support</fullName>
            </value>
            <value>
                <fullName>Media Spend Opt.</fullName>
            </value>
            <value>
                <fullName>Report Analysis</fullName>
            </value>
            <value>
                <fullName>Billing Issue</fullName>
            </value>
            <value>
                <fullName>Custom Solution</fullName>
            </value>
            <value>
                <fullName>Consulting Service (paid)</fullName>
            </value>
            <value>
                <fullName>Handover to Support</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>