force-app/main/default/objects/Engagement__c/fields/Expected_Engagement_Finish__c.field-meta.xml
<CustomField>
    <fullName>Expected_Engagement_Finish__c</fullName>
    <description>Expected Engagement Finish</description>
    <label>Expected Engagement Finish</label>
    <type>Date</type>
</CustomField>