force-app/main/default/objects/Engagement__c/fields/Expected_Engagement_Start__c.field-meta.xml
<CustomField>
    <fullName>Expected_Engagement_Start__c</fullName>
    <description>Expected Engagement Start</description>
    <label>Expected Engagement Start</label>
    <type>Date</type>
</CustomField>