force-app/main/default/objects/Engagement__c/fields/Probability_to_close__c.field-meta.xml
<CustomField>
    <fullName>Probability_to_close__c</fullName>
    <label>Probability to close</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>