force-app/main/default/objects/Engagement__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>DOOH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>