force-app/main/default/objects/Engagement__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason</description>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>