force-app/main/default/objects/Engagement__c/fields/Requester_comments__c.field-meta.xml
<CustomField>
    <fullName>Requester_comments__c</fullName>
    <label>Requester comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>