force-app/main/default/objects/Engagement__c/fields/RTB_case_number__c.field-meta.xml
<CustomField>
    <fullName>RTB_case_number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>RTB case number</label>
    <type>AutoNumber</type>
</CustomField>