force-app/main/default/objects/Engagement__c/fields/RTB_managed_service__c.field-meta.xml
<CustomField>
    <fullName>RTB_managed_service__c</fullName>
    <label>RTB managed service</label>
    <type>Date</type>
</CustomField>