force-app/main/default/objects/Engagement__c/recordTypes/Engagements.recordType-meta.xml
<RecordType>
    <fullName>Engagements</fullName>
    <active>true</active>
    <label>Engagements</label>
</RecordType>