force-app/main/default/objects/Engagement__c/recordTypes/RTB_Managed_Service.recordType-meta.xml
<RecordType>
    <fullName>RTB_Managed_Service</fullName>
    <active>true</active>
    <description>RTB Managed Service Information</description>
    <label>RTB Managed Service</label>
</RecordType>